# vis-downloader

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
src/vis_downloader/: __about__.py  __init__.py  async_dowload.py  async_download.py  casda_login.py
tests/: test_package.py
