[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vis-downloader"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Alec Thomson (S&A, Kensington WA)", email = "alec.thomson@csiro.au" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "astropy",
  "astroquery>=0.4.8.dev0",
  "requests",
  "tqdm",
]

[project.urls]
Documentation = "https://github.com/Alec Thomson (S&A, Kensington WA)/vis-downloader#readme"
Issues = "https://github.com/Alec Thomson (S&A, Kensington WA)/vis-downloader/issues"
Source = "https://github.com/Alec Thomson (S&A, Kensington WA)/vis-downloader"

[tool.hatch.version]
path = "src/vis_downloader/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/vis_downloader tests}"

[tool.coverage.run]
source_pkgs = ["vis_downloader", "tests"]
branch = true
parallel = true
omit = [
  "src/vis_downloader/__about__.py",
]

[tool.coverage.paths]
vis_downloader = ["src/vis_downloader", "*/vis-downloader/src/vis_downloader"]
tests = ["tests", "*/vis-downloader/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
vis_download = "vis_downloader.async_download:main"